<resources>
    <string name="app_name">Maida\'s CV</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Maida Tariq</string>
    <string name="resume_title">Software Quality Assurance Engineer (Fresh)</string>
    <string name="user_address">Lahore,Pakistan </string>
    <string-array name="home">
        <item>Home</item>
        <item>Profile</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_information">Contact Information</string>
    <string name="email">maidatariqmdt@gmail.com</string>
    <string name="Address">Lahore, Pakistan</string>
    <string name="description">Description</string>
    <string name="AboutMe_Title">About Me</string>
    <string name="Question1">Career Goal</string>
    <string name="Question2">Ownership</string>
    <string name="experience">Experience</string>
    <string name="hands_on_skills">Skills</string>
    <string name="phoneNumber">+923430057675</string>
    <string name="Linkedin_IdLink">https://www.linkedin.com/in/maidatariq/</string>
    <string name="Linkedin_UserName">maidatariq</string>
    <string name="Github_UserName">maidatariqmdt</string>
    <string name="Github_IdLink">https://github.com/maidatariqmdt</string>
    <string name="ieee_link"></string>
    <string name="StackOverFlow_UserName">Maida Tariq</string>
    <string name="stackOverFlow_IdLink">https://stackoverflow.com/users/6784546/maida-tariq</string>
    <string name="education">Education</string>
    <string name="answer">A self-motivated and energetic enthusiast willing to accept challenges in life, availing every opportunity to constantly learn and improve.</string>
    <string name="answer1">I am accustomed to leading and working in groups and an effective communicator.</string>

    <string name="year"></string>
    <string name="year2"></string>
    <string name="todo">TODO</string>
    <string name="email_title">Email</string>
    <string name="address_title">Address</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="professional_links_title">Professional Links</string>
    <string name="linkedin_title">Linkedin</string>
    <string name="twitter_title">Twitter</string>
    <string name="stack_overflow_title">Stack Overflow</string>
    <string name="github_title">Github</string>
	
    <string name="Matric_degree_title">Matric</string>
    <string name="school_name">Divisional Public School</string>
    <string name="intermediate_title">Faculty of Science in Pre-Engineering</string>
    <string name="college_title">Government Post Graduate College for Women,Samnabad</string>
    <string name="graduation_title">Bachelors of Science in Computer Science (BSCS) </string>
    <string name="university_title">National University College of Computer and Emerging Sciences (FAST-NUCES)</string>
	
    <string name="degree_title1">Connect People App</string>
	
    <string name="degree_title2">Degree Title</string>
    <string name="degree_title3">Degree Title</string>
    <string name="school_year"></string>
    <string name="college_year"></string>
    <string name="university_year"></string>
    <string name="Cgpa"></string>
	
    <string name="certification_courses_title">Final Year Project</string>
    <string name="institute_title">An application which schedules meeting of Friends/People and expose multiple AI features along with normal features (Notification,
										Alarm, Scheduling, Cancel, Notes) to other People. Including artificial intelligence features to
										track the location of each member coming to meet on destination of meeting. Identification of
										rushy areas and inform other app users to avoid rush and traffic jam. Prediction of chances that
										some member will come on get together or not (on the basis of past history). It can track the
										location of your Best Buddies.</string>
    <string name="institute_year"></string>
    <string name="grades">(grades)</string>
    <string name="institute_title1">Institute Title</string>
    <string name="institude_year1">(year)</string>
    <string name="grades1">(grades)</string>
    <string name="institute_title2">Institute Title</string>
    <string name="institute_year2">(year)</string>
    <string name="grades2">(grades)</string>
	
    <string name="skill_title_3">Android Development</string>
    <string name="skill_title_2">Java</string>
    <string name="skill_title_4">Web Development</string>
    <string name="skill_title_1">C++</string>
    <string name="skill_title_5">Python</string>
	
    <string name="projects_title">Project</string>

</resources>
