<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:padding="6dp"
    android:orientation="vertical"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:gravity="end"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="3.5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="1dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_1"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="3.5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_2"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="3"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_3"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="2.5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_4"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/averageColor"
                    android:rating="2.5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:secondaryProgressTint="@android:color/transparent"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left|center"
                    android:text="@string/skill_title_5"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    card_view:ignore="RtlHardcoded" />
            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/hands_on_skills"
            android:textColor="@color/blackColor"
            android:textSize="18sp"
            app:fontFamily="@font/roboto" />


    </androidx.cardview.widget.CardView>


</LinearLayout>
